--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.3.3",
     "chart.js": "^4.2.1",
     "emailjs": "^4.0.1",
+    "randomcolor": "^0.6.2",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
+    "uniqolor": "^1.1.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
